refactor(i): Reorganize existing document acp 2 (#3752)
## Relevant issue(s)
Resolves #3751

## Description
- Splitting out of main aac work to make aac review simpler, this is
part 2 of https://github.com/sourcenetwork/defradb/pull/3657

- Changes are mostly renames and re-organizing to accommodate the aac
implementation changes coming in and avoid any unnecessary confusion
between admin acp and document acp.
