# http/openapi.go
@@ -21,35 +21,35 @@ import (
 
 // openApiSchemas is a mapping of types to auto generate schemas for.
 var openApiSchemas = map[string]any{
-	"error":                           &errorResponse{},
-	"create_tx":                       &CreateTxResponse{},
-	"collection_update":               &CollectionUpdateRequest{},
-	"collection_delete":               &CollectionDeleteRequest{},
-	"peer_info":                       &peer.AddrInfo{},
-	"graphql_request":                 &GraphQLRequest{},
-	"backup_config":                   &client.BackupConfig{},
-	"collection":                      &client.CollectionVersion{},
-	"schema":                          &client.SchemaDescription{},
-	"collection_definition":           &client.CollectionDefinition{},
-	"index":                           &client.IndexDescription{},
-	"index_create_request":            &client.IndexCreateRequest{},
-	"delete_result":                   &client.DeleteResult{},
-	"update_result":                   &client.UpdateResult{},
-	"lens_config":                     &client.LensConfig{},
-	"replicator":                      &client.Replicator{},
-	"replicator_params":               &client.ReplicatorParams{},
-	"ccip_request":                    &CCIPRequest{},
-	"ccip_response":                   &CCIPResponse{},
-	"patch_schema_request":            &patchSchemaRequest{},
-	"add_view_request":                &addViewRequest{},
-	"migrate_request":                 &migrateRequest{},
-	"set_migration_request":           &setMigrationRequest{},
-	"acp_policy_add_result":           &client.AddPolicyResult{},
-	"acp_relationship_add_request":    &addDocActorRelationshipRequest{},
-	"acp_relationship_add_result":     &client.AddDocActorRelationshipResult{},
-	"acp_relationship_delete_request": &deleteDocActorRelationshipRequest{},
-	"acp_relationship_delete_result":  &client.DeleteDocActorRelationshipResult{},
-	"identity":                        &identity.PublicRawIdentity{},
+	"error":                               &errorResponse{},
+	"create_tx":                           &CreateTxResponse{},
+	"collection_update":                   &CollectionUpdateRequest{},
+	"collection_delete":                   &CollectionDeleteRequest{},
+	"peer_info":                           &peer.AddrInfo{},
+	"graphql_request":                     &GraphQLRequest{},
+	"backup_config":                       &client.BackupConfig{},
+	"collection":                          &client.CollectionVersion{},
+	"schema":                              &client.SchemaDescription{},
+	"collection_definition":               &client.CollectionDefinition{},
+	"index":                               &client.IndexDescription{},
+	"index_create_request":                &client.IndexCreateRequest{},
+	"delete_result":                       &client.DeleteResult{},
+	"update_result":                       &client.UpdateResult{},
+	"lens_config":                         &client.LensConfig{},
+	"replicator":                          &client.Replicator{},
+	"replicator_params":                   &client.ReplicatorParams{},
+	"ccip_request":                        &CCIPRequest{},
+	"ccip_response":                       &CCIPResponse{},
+	"patch_schema_request":                &patchSchemaRequest{},
+	"add_view_request":                    &addViewRequest{},
+	"migrate_request":                     &migrateRequest{},
+	"set_migration_request":               &setMigrationRequest{},
+	"acp_policy_add_result":               &client.AddPolicyResult{},
+	"acp_relationship_add_result":         &client.AddActorRelationshipResult{},
+	"acp_relationship_delete_result":      &client.DeleteActorRelationshipResult{},
+	"acp_dac_relationship_add_request":    &addDACActorRelationshipRequest{},
+	"acp_dac_relationship_delete_request": &deleteDACActorRelationshipRequest{},
+	"identity":                            &identity.PublicRawIdentity{},
 }
 
 func NewOpenAPISpec() (*openapi3.T, error) {
@@ -152,7 +152,7 @@ func NewOpenAPISpec() (*openapi3.T, error) {
 			},
 			&openapi3.Tag{
 				Name:        "acp",
-				Description: "Access control system",
+				Description: "Access control system(s)",
 			},
 			&openapi3.Tag{
 				Name:        "transaction",
